plugins {
    id "java"
    id "org.springframework.boot" version "2.3.0.RELEASE"
    id "io.spring.dependency-management" version "1.0.9.RELEASE"
}

group "pickjob"
version "0.0.1"
ext.mainClassName = "app.Application"

configurations {
    implementation {
        exclude group: "org.apache.logging.log4j", module: "log4j-to-slf4j"
        exclude group: "ch.qos.logback", module: "logback-classic"
    }
}

dependencies {
    // log4j
    implementation "com.lmax:disruptor:3.4.2"
    implementation "org.apache.commons:commons-lang3:3.8"
    // mysql
    implementation "mysql:mysql-connector-java:8.0.15"
    implementation "org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.2"

    implementation "org.apache.commons:commons-pool2:2.7.0"
    // caffeine
    implementation "com.github.ben-manes.caffeine:caffeine:2.8.2"
    // jwt
    implementation "org.bitbucket.b_c:jose4j:0.7.2"
    // shiro
    implementation "org.apache.shiro:shiro-spring-boot-web-starter:1.5.0"

    implementation "org.javassist:javassist:3.20.0-GA"
    implementation "org.aspectj:aspectjweaver:1.9.3"
    implementation "cglib:cglib:3.2.11"

    implementation "org.springframework.boot:spring-boot-starter-log4j2"
    implementation "org.springframework.boot:spring-boot-starter-aop"
    implementation "org.springframework.boot:spring-boot-starter-cache"
    implementation "org.springframework.boot:spring-boot-starter-quartz"
    implementation "org.springframework.boot:spring-boot-starter-validation"
    implementation "org.springframework.boot:spring-boot-starter-data-jdbc"
    implementation "org.springframework.boot:spring-boot-starter-data-redis"
    implementation "org.springframework.boot:spring-boot-starter-web"
    implementation "org.springframework.boot:spring-boot-starter-websocket"
    implementation "org.springframework.boot:spring-boot-starter-actuator"

    // swagger
    implementation "io.springfox:springfox-swagger2:2.9.2"
    implementation "io.springfox:springfox-swagger-ui:2.9.2"

    // assist
    implementation "org.springframework.boot:spring-boot-configuration-processor"
}

repositories {
    maven {
        url "https://maven.aliyun.com/repository/central"
    }
    maven {
        url "https://repo.spring.io/libs-release"
    }
    maven {
        url "https://repository.apache.org/content/repositories/releases"
    }
    maven {
        url "https://jcenter.bintray.com"
    }
    maven {
        url "https://repo1.maven.org/maven2"
    }
}
/*
 *  Plugin: java配置
 */
compileJava {
    sourceCompatibility = 14
    targetCompatibility = 14
    options.encoding = "UTF-8"
}
/*
 *  Plugin: Spring Boot 配置
 */
bootRun {
    main = "${mainClassName}"
}